--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,6 @@
-<div class="container">
-  <% @articles.each do |article| %>
-    <article>
-      <h2><%= link_to article.title, article %></h2>
-      <%= article.content[0..100] %>
-    </article>
-  <% end %>  
-</div>
+<% @articles.each do |article| %>
+  <article class="mb-3">
+    <h2><%= link_to article.title, article %></h2>
+    <%= article.content.truncate(100) %>
+  </article>
+<% end %>
