--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,12 @@
 
   <body>
     <%= render 'shared/navbar' %>
-    <%= yield %>
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col-sm-8 offset-sm-2">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
